# Valash

./: README.md  TODO.md  com.github.driverding.Valash.json  meson.build
.flatpak/: meson.sh  vala-language-server.sh
data/: com.github.driverding.Valash.desktop.in  com.github.driverding.Valash.gschema.xml  com.github.driverding.Valash.metainfo.xml.in  com.github.driverding.Valash.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  clash.vala  connection-page.vala  graph.vala  login-window.vala  main-window.vala  main.vala  meson.build  overview-page.vala  proxies-page.vala  proxy-button-box.vala  proxy-group-row.vala  proxy-provider-row.vala  utils.vala  valash.gresource.xml
src/ui/: connection-page.blp  login-window.blp  main-window.blp  meson.build  overview-page.blp  proxies-page.blp  proxy-button-box.blp  proxy-group-row.blp  proxy-provider-row.blp  style.css
